# m

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  RUNSHEET.md  SERVER.md  bench.sh  run.sh  run_concurrent.sh
.github/workflows/: ci.yml  release.yml
.m/skills/mermaid/: SKILL.md
.m/skills/optimization/: SKILL.md
bench/: RESULTS.md  instances-heldout.txt  instances.txt  m-gemma4-12b-mtp.m-heldout-v1.json  m-gemma4-12b-mtp.m-heldout-v2.json  m-gemma4-12b-mtp.m-smoke.json  m-gemma4-12b-mtp.m-v1.json
bench/logs/run_evaluation/m-smoke/m-gemma4-12b-mtp/astropy__astropy-12907/: patch.diff  test_output.txt
bench/logs/run_evaluation/m-smoke/m-gemma4-12b-mtp/django__django-11039/: test_output.txt
bench/logs/run_evaluation/m-v1/m-gemma4-12b-mtp/django__django-11039/: test_output.txt
bench/logs/run_evaluation/m-v1/m-gemma4-12b-mtp/django__django-11630/: patch.diff  test_output.txt
bench/logs/run_evaluation/m-v1/m-gemma4-12b-mtp/django__django-13230/: test_output.txt
bench/logs/run_evaluation/m-v1/m-gemma4-12b-mtp/django__django-13660/: test_output.txt
bench/logs/run_evaluation/m-v1/m-gemma4-12b-mtp/django__django-14238/: patch.diff  test_output.txt
bench/logs/run_evaluation/m-v1/m-gemma4-12b-mtp/django__django-14787/: patch.diff  test_output.txt
crates/m-bench/: Cargo.toml
crates/m-bench/src/: main.rs
crates/m-core/: Cargo.toml
crates/m-core/src/: agent.rs  config.rs  context.rs  error.rs  http.rs  lib.rs  prompt.rs  provider.rs  session.rs  tools.rs
crates/m-tui/: Cargo.toml
crates/m-tui/src/: main.rs
crates/m-tui/src/tui/: files.rs  fuzzy.rs  hl.rs  input.rs  md.rs  mod.rs  theme.rs
tb/: README.md  m-setup.sh  m_agent.py  pick.py
(+23 files in other folders)
