[workspace]
resolver = "3"
members = ["crates/m-core", "crates/m-tui", "crates/m-bench"]

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/dairycow/m"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
