[package]
name = "m-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["tls"]
# TLS for https providers. Off for the static musl container build, which
# only ever talks plain http to the local server.
tls = ["dep:rustls", "dep:webpki-roots"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
libc.workspace = true
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"], optional = true }
webpki-roots = { version = "0.26", optional = true }
toml = "0.8"
dirs = "5"
similar = "2"
